用户画像头像，户型图，公告附件上传至oss

--- a/WebContent/data_access/select_view/select_house_pic.html
+++ b/WebContent/data_access/select_view/select_house_pic.html
@@ -18,7 +18,7 @@
         var fname = decodeURI(getUrlParamByKey('fname'));
 
         $(function(){
-            var url = getRootPath()+ "/fileUpload.action?img_type=1&file_name=house_type_image";
+         /*   var url = getRootPath()+ "/fileUpload.action?img_type=1&file_name=house_type_image";
             var elementsId = ['house_pic'];
             $('#house_pic').change(function(){
                 $.ajaxFileUpload({
@@ -44,7 +44,34 @@
                         $$.showMessage("提示",e);
                     }
                 });
-            });
+            });*/
+
+            var url = getRootPath()+ "/uploadFileToOss.action?storeDir=daqWeb/house_type_image/";
+            var elementsId = ['house_pic'];
+            $('#house_pic').change(function(){
+                $.ajaxFileUpload({
+                    url: url,
+                    type: 'post',
+                    secureuri: false, //一般设置为false
+                    fileElementId: elementsId, // 上传文件的id、name属性名
+                    dataType: 'json', //返回值类型，一般设置为json、application/json
+                    success: function(data, status){
+
+                        if(data.status=="success"){
+
+                            $('#pic_name').val(data.fileName);
+
+                            doSubmit();
+                        }else{
+                            $$.showMessage('提示',data.message);
+                        }
+                    },
+                    error: function(data, status, e){
+                        $$.showMessage("提示",e);
+                    }
+                });
+
+            })
 
             if(tv_id == null || tv_id == ''){
                 return;
