--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -647,6 +647,7 @@
 	    }
  	    var pageInfo = new Object();
  	    pageInfo.currentPage = cur_page;
+
 	    doManager('dynamicManager','getUserMemberInfo',[dynamicDto,pageInfo],function(data){
            if(data.result){
            	   var result= JSON.parse(data.data);
@@ -688,7 +689,7 @@
 	        		   
 	        		   infoStr= "<tr>"
 		                       +"<td>"+cityname+"</td>"
-		                       +"<td>"+jData[i].nowcount+"</td>"
+		                       +"<td><a target=\"userProfile_view\" href=\"userProfile_view.html?t="+encode64(target)+"&tag="+encode64("V")+"&time="+encode64(sdate)+"&cn="+encode64(cityname)+"\">"+jData[i].nowcount+"</a></td>"
 		                       +"<td>"+jData[i].count199+"</td>"
 		                       +"<td>"+jData[i].opencount+"</td>"
 		                       +"</tr>";
@@ -840,7 +841,7 @@
 		                       +"<td>"+cityname+"</td>"
 		                       +"<td>"+jData[i].name+"</td>"
 		                       +"<td>"+jData[i].storeno+"</td>"
-		                       +"<td>"+jData[i].nowcount+"</td>"
+						       +"<td><a target=\"userProfile_view\" href=\"userProfile_view.html?t="+encode64(target)+"&tag="+encode64("V")+"&time="+encode64(sdate)+"&cn="+encode64(cityname)+"&so="+encode64(jData[i].storeno)+"&sn="+encode64(jData[i].name)+"\">"+jData[i].nowcount+"</a></td>"
 		                       +"<td>"+jData[i].count199+"</td>"
 		                       +"<td>"+jData[i].opencount+"</td>"
 		                       +"</tr>";
