添加大客户页

--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -163,6 +163,7 @@
           <ul class="nav nav-tabs">
 		              <li class="active" id="tab_1_avtive"><a href="#tab_1" data-toggle="tab" aria-expanded="true">门店单位统计</a></li>
 		              <li class="" id="tab_2_avtive"><a href="#tab_2" data-toggle="tab" aria-expanded="false">城市单位统计</a></li>
+			  		  <li class="" id="tab_3_avtive"><a href="#tab_3" data-toggle="tab" aria-expanded="false">大客户单位统计</a></li>
 		  </ul>
 		  <div class="tab-content">
 			  <div class="tab-pane active" id="tab_1">
@@ -347,6 +348,78 @@
 	            <div class="tcdPageCode" id="page_city"></div>
 	          </div>
 	        </div>
+
+			  <div class="tab-pane" id="tab_3">
+				  <div class="box-body">
+					  <div class="clearfix search-criteria">
+						  <div id="selectorLine clearfix no-border" class="clearfix">
+							  <div class="form-group col-lg-4">
+								  <label>开卡时间</label>
+								  <div class="search-con">
+									  <div class="time" id="time_flag" style="width: 325px;z-index: 99999;margin:3px 15px;">
+										  <div class="time_endbg" id="first_time_endbg">
+											  <p>日期选择：<span class="data_choice" id="first_data_choice">默认时期</span></p>
+											  <input type="text" class="ui-datepicker-time" id="first_date" readonly="" value="">
+										  </div>
+									  </div>
+									  <div class="ui-datepicker-css" id="first-ui-datepicker-css" style="margin: 0px 15px; display: none;">
+										  <div class="ui-datepicker-quick" id="first-ui-datepicker-quick">
+											  <input class="ui-date-quick-button" type="button" value="今天" alt="0"  name=""/>
+											  <input class="ui-date-quick-button" type="button" value="昨天" alt="-1" name="">
+											  <input class="ui-date-quick-button" type="button" value="7天内" alt="-6" name="">
+											  <input class="ui-date-quick-button" type="button" value="30天内" alt="-29" name="">
+											  <input class="ui-date-quick-button" type="button" value="60天内" alt="-59" name="">
+											  <input class="ui-date-quick-button" type="button" value="全部" alt="1" name="">
+											  <span class="ui-close-date" id="first-ui-close-date" style="cursor:pointer;">X</span>
+										  </div>
+										  <div class="ui-datepicker-choose">
+											  <!--<p>自选日期</p>-->
+											  <div class="ui-datepicker-date">
+												  <input name="startDateFirst" id="startDateFirst" class="startDate" readonly="" value="2018/07/01" type="text">
+												  到
+												  <input name="endDateFirst" id="endDateFirst" class="endDate" readonly="" value="2018/07/23" type="text">
+											  </div>
+											  <div class="opeDiv">
+												  <span class="Confirm" id="ConfirmFirst" onclick="datePickersFirst()">确定</span>
+												  <span class="Cancel" id="CancelFirst">取消</span>
+											  </div>
+										  </div>
+									  </div>
+								  </div>
+							  </div>
+						  </div>
+					  </div>
+
+					  <div class="clearfix">
+						  <div class="form-group col-lg-2 pull-right" style="margin-top: 20px; padding: 0 25px;">
+							  <button type="button" onclick="export_city()" class="btn btn-block btn-warning">导出</button>
+						  </div>
+						  <div class="form-group col-lg-2 pull-right" style="margin-top: 20px; padding: 0 25px;">
+							  <button type="button" class="btn btn-block btn-primary" onclick="searchInfo_step1(1)">查询</button>
+						  </div>
+
+					  </div>
+
+				  </div>
+				  <div class="box-body">
+					  <div class="tab-content">
+						  <div>
+							  <table class="table table-striped">
+								  <tbody id="tradeType_tbody_customer">
+								  <tr>
+									  <th width="12%">用户信息</th>
+									  <th width="12%">开卡时间</th>
+									  <th width="12%">开卡数</th>
+								  </tr>
+								  </tbody>
+							  </table>
+						  </div>
+						  <!-- /.tab-pane -->
+					  </div>
+					  <!-- /.tab-content -->
+					  <div class="tcdPageCode" id="page_customer"></div>
+				  </div>
+			  </div>
         </div>
         </div>
       </section>
